<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grpMenu_category" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_carros_todos"
            android:checked="true"
            android:icon="@drawable/ic_drawer_cor"
            android:title="@string/tudo" />
        <item
            android:id="@+id/nav_item_carros_classicos"
            android:icon="@drawable/ic_drawer_cor"
            android:title="@string/classicos" />
        <item
            android:id="@+id/nav_item_carros_esportivos"
            android:icon="@drawable/ic_drawer_cor"
            android:title="@string/esportivos" />
        <item
            android:id="@+id/nav_item_carros_luxo"
            android:icon="@drawable/ic_drawer_cor"
            android:title="@string/luxo" />
        <item
            android:id="@+id/nav_item_site_sobre"
            android:icon="@drawable/ic_drawer_site_livro"
            android:title="@string/site_sobre_nos" />
    </group>

    <group android:id="@+id/grpMenu_setting" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/logout" />
    </group>
</menu>