<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:padding="16dp"
    app:cardUseCompatPadding="false"
    card_view:cardCornerRadius="2dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <RadioGroup
                android:id="@+id/rgTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbTipoClassico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/classico" />

                <RadioButton
                    android:id="@+id/rbTipoEsportivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/esportivo" />

                <RadioButton
                    android:id="@+id/rbTipoLuxo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/luxo" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/etNome"
                android:text="@string/nome"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/etDescricao"
                android:text="@string/descricao"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etDescricao"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center|center_vertical"
            android:visibility="invisible" />

    </FrameLayout>
</android.support.v7.widget.CardView>